--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "china-map-geojson",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "中国及各省市地图 geoJSON 数据",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --check-leaks --compilers js:babel-core/register",
-    "build": "rm -rf lib && babel src --out-dir lib",
+    "build": "rm -rf lib && rm -rf umd && babel src --out-dir lib && npm run build-umd && npm run build-umd-min",
+    "build-umd": "cross-env NODE_ENV=development webpack src/index.js umd/china-map-geojson.js",
+    "build-umd-min": "cross-env NODE_ENV=production webpack src/index.js umd/china-map-geojson.min.js",
     "prepublish": "npm run build"
   },
   "devDependencies": {
@@ -14,7 +16,12 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-stage-0": "^6.16.0",
+    "mocha": "^4.0.1",
+    "cross-env": "^5.0.5",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "keywords": [
     "china",
@@ -30,11 +37,11 @@
     "url": "https://github.com/twobin/china-map-geojson/issues"
   },
   "homepage": "https://github.com/twobin/china-map-geojson",
-  "dependencies": {
-  },
+  "dependencies": {},
   "files": [
     "src",
     "lib",
+    "umd",
     "*.md"
   ],
   "license": "ISC"
